projects/ingess/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /calendar(/|$)(.*)
        backend:
          service:
            name: calendar-app-service
            port:
              number: 8085
      - pathType: ImplementationSpecific
        path: /calender(/|$)(.*)
        backend:
          service:
            name: calendar-app-service
            port:
              number: 8085
      - pathType: ImplementationSpecific
        path: /notes(/|$)(.*)
        backend:
          service:
            name: notes-app-service
            port:
              number: 8888
      - pathType: ImplementationSpecific
        path: /()(static.*)
        backend:
          service:
            name: notes-app-service
            port:
              number: 8888
      - pathType: ImplementationSpecific
        path: /()(api.*)
        backend:
          service:
            name: notes-app-service
            port:
              number: 8888
